Moved some things around, and some cleanup. Looking at the twitter search persistence and count query.