@@ -194,6 +194,7 @@
 				<version>2.6</version>
 				<configuration>
 					<forkMode>once</forkMode>
+                    <argLine>-XX:PermSize=512m -XX:MaxPermSize=1024m -Xms2048m -Xmx4096m</argLine>
                     <testFailureIgnore>true</testFailureIgnore>
                     <includes>
                         <include>**/*Integration*.java</include>
@@ -225,34 +226,6 @@
 				<artifactId>maven-site-plugin</artifactId>
 				<version>2.1.1</version>
 			</plugin>
-            <!-- This plugin creates html from the documentation. -->
-            <plugin>
-                <groupId>org.asciidoctor</groupId>
-                <artifactId>asciidoctor-maven-plugin</artifactId>
-                <version>0.1.4</version>
-                <executions>
-                    <execution>
-                        <id>render-asciidoc</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>process-asciidoc</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <backend>html5</backend>
-                    <sourceDirectory>docs</sourceDirectory>
-                    <outputDirectory>code/site/src/main/webapp/docs</outputDirectory>
-                    <!--<sourceHighlighter>coderay</sourceHighlighter>-->
-                    <!--<embedAssets>false</embedAssets>-->
-                    <attributes>
-                        <!--<toc/>-->
-                        <linkcss>true</linkcss>
-                        <!--<copycss>false</copycss>-->
-                        <stylesheet>application.css</stylesheet>
-                    </attributes>
-                </configuration>
-            </plugin>
             <!-- Supposedly this plugin can generate graphs of the dependencies. -->
             <plugin>
                 <groupId>org.fusesource.mvnplugins</groupId>
